# IntroDataScience

./: README.md  pyproject.toml  requirements.txt  run_package_installation.ipynb  run_package_installation.py
1_technical_foundations_of_DS/: [Answer]Python_Debugging_Notebook.ipynb
1_technical_foundations_of_DS/1_Intro_to_Python/: How_to_ask_for_help.ipynb  How_to_ask_for_help.py
2_virtual_classroom_materials/day_1_preprocessing/: 1_First_look_at_the_data.ipynb  1_First_look_at_the_data.py  1_First_look_at_the_data_jupyter.ipynb  2. Data_Aggregation.ipynb  2_Data_Aggregation.ipynb  2_Data_Aggregation.py  2_Data_Aggregation_jupyter.ipynb  3. Data_Merging.ipynb  3_Data_Merging.py  3_Data_Merging_jupyter.ipynb  4. Transforming_data.ipynb  4_Transforming_data.py  4_Transforming_data_jupyter.ipynb  5. Missing_And_Duplicate_Data.ipynb  5_Missing_And_Duplicate_Data.ipynb  5_Missing_And_Duplicate_Data.py  5_Missing_And_Duplicate_Data_jupyter.ipynb  6. Strings_And_Regex.ipynb  6_Strings_And_Regex.ipynb  6_Strings_And_Regex.py  6_Strings_And_Regex_jupyter.ipynb  ANSWERS_1_First_look_at_the_data.py  ANSWERS_2_Data_Aggregation_jupyter.ipynb  ANSWERS_3_Data_Merging.py  ANSWERS_3_Data_Merging_jupyter.ipynb  [Answer]1_First_look_at_the_data_jupyter.ipynb  [Answer]2_Data_Aggregation_jupyter.ipynb  (+5 more)
3_artificial_use_case/: How_to_ask_for_help.ipynb  How_to_ask_for_help.py  Use_Case_Pattern.ipynb  ec2-rule.ipynb  git-extra-tips.ipynb  git-extra-tips.py  package_installation_guide.txt
Data/: Movie Gross First 2 Weeks.csv  bmi_data_male_vs_female.csv  fraud_test.csv  japan_pop.csv
(+588 files in other folders)
