[tool.poetry]
name = "contribute-data-science-apex"
version = "0.1.0"
description = "Code for the contribute to DS course"
authors = ["Your Name <you@example.com>"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
